Remove code smells from controller